update with, Oath edit and Mongodb

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+SESSION_SECRET=Bstyl
+DATABASE_URL=mongodb+srv://Vdub:<password>@cluster0.ag2uz.mongodb.net/<dbname>?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=626205402180-sr2er48bceio2drilnf0p5hicd8i7mc4.apps.googleusercontent.com
 GOOGLE_SECRET=5fjf1movk9VNXPCIE5HHiRCO
 GOOGLE_CALLBACK=http://localhost:3000/oauth2callback
